--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-boilerplate",
+  "name": "noteful-pg-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,6 +9,8 @@
   "scripts": {
     "test": "mocha --require test/setup.js",
     "start": "node src/server.js",
+    "migrate": "postgrator --config postgrator-config.js",
+    "migrate:test": "env NODE_ENV=test npm run migrate",
     "predeploy": "npm audit",
     "deploy": "git push heroku master",
     "dev": "nodemon src/server.js"
@@ -20,8 +22,12 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.1.1",
+    "knex": "^0.21.12",
     "morgan": "^1.10.0",
-    "winston": "^3.3.3"
+    "pg": "^8.4.2",
+    "postgrator-cli": "^4.0.0",
+    "winston": "^3.3.3",
+    "xss": "^1.0.8"
   },
   "devDependencies": {
     "chai": "^4.2.0",
